CloudWebApp/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: girishcodealchemy
  namespace: candidate-f
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
      annotations:
        injector.nsm.nginx.com/auto-inject: "enabled"
    spec:
      containers:
        - name: webserver
          image: girishcodealchemy/alchemy-nginx:v2
          imagePullPolicy: Always
          resources:
            requests:
              memory: "8Mi"
              cpu: "2m"
            limits:
              memory: "32Mi"
              cpu: "32m"
          ports:
            - containerPort: 80
              name: "http"
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html/config.html
              subPath: config.html
            - name: html
              mountPath: /usr/share/nginx/html/page2.html
              subPath: page2.html
            - name: html
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
            - name: html
              mountPath: /etc/nginx/conf.d/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: "html"
          configMap:
            name: girishcodealchemy-configmap
            # items:
            #   - key: config.html
            #     path: config.html
            #   - key: page2.html
            #     path: page2.html
