CloudWebApp/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ${service_name}
  namespace: candidate-f
  labels:
    app: nginx
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ${dns_name}
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 80
  - port: 443
    name: https
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
