CloudWebApp/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: girishcodealchemy-ingress
  namespace: candidate-f
  annotations:
    nginx.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:663118211814:certificate/b7966c21-51ec-430e-b6fb-a0410e0af514
    nginx.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]'
    nginx.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    nginx.ingress.kubernetes.io/rewrite-target: /
    external-dns.alpha.kubernetes.io/hostname: girishcodealchemy.test-subaccount-1-v02.test-subaccount-1.rr.mu
spec:
  ingressClassName: nginx
  rules:
  - host: girishcodealchemy.test-subaccount-1-v02.test-subaccount-1.rr.mu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: "girishcodealchemy-svc"
            port:
              name: "https"
